--- a/Artificial Neural Network.ipynb
+++ b/Artificial Neural Network.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Neural network that takes two inputs, has one hidden layer with two nodes, and an output layer with one node."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +20,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20,12 +28,12 @@
    "source": [
     "from IPython.display import Image\n",
     "Image(\"/home/adarshrana205/Desktop/neural_network_example.png\")\n",
-    "#Link for below image:(\"http://cocl.us/neural_network_example"
+    "#Link for below image:(\"http://cocl.us/neural_network_example\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +41,154 @@
     "\n",
     "weights = np.around(np.random.uniform(size=6), decimals=2) \n",
     "biases = np.around(np.random.uniform(size=3), decimals=2) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.52 0.02 0.07 0.86 0.03 0.74]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.55 0.89 0.71]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(biases)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x1 is 0.5 and x2 is 0.85\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_1 = 0.5 \n",
+    "x_2 = 0.85 \n",
+    "print('x1 is {} and x2 is {}'.format(x_1, x_2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The weighted sum of the inputs at the first node in the hidden layer is 0.8270000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "z_11=x_1*weights[0]+x_2*weights[1]+biases[0]\n",
+    "\n",
+    "print('The weighted sum of the inputs at the first node in the hidden layer is {}'.format(z_11))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The weighted sum of the inputs at the second node in the hidden layer is 1.656\n"
+     ]
+    }
+   ],
+   "source": [
+    "z_12=x_1*weights[2]+x_2*weights[3]+biases[1]\n",
+    "\n",
+    "print('The weighted sum of the inputs at the second node in the hidden layer is {}'.format(np.around(z_12, decimals=4)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The activation of the first node in the hidden layer is 0.6957\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_11 = 1.0 / (1.0 + np.exp(-z_11))\n",
+    "\n",
+    "print('The activation of the first node in the hidden layer is {}'.format(np.around(a_11, decimals=4)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The activation of the second node in the hidden layer is 0.8397\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_12 = 1.0 / (1.0 + np.exp(-z_12))\n",
+    "\n",
+    "print('The activation of the second node in the hidden layer is {}'.format(np.around(a_12, decimals=4)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The weighted sum of the inputs at the node in the output layer is 1.3522\n"
+     ]
+    }
+   ],
+   "source": [
+    "z_2 = a_11 * weights[4] + a_12 * weights[5] + biases[2]\n",
+    "\n",
+    "print('The weighted sum of the inputs at the node in the output layer is {}'.format(np.around(z_2, decimals=4)))"
    ]
   },
   {
