--- a/Artificial Neural Networks - Forward Propagation.ipynb
+++ b/Artificial Neural Networks - Forward Propagation.ipynb
@@ -242,10 +242,109 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 2 \n",
+    "num_hidden_layers = 2\n",
+    "m = [2, 2]\n",
+    "num_nodes_output = 1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'layer_1': {'node_1': {'weights': array([0.51, 0.47]), 'bias': array([0.87])}, 'node_2': {'weights': array([0.76, 0.86]), 'bias': array([0.13])}}, 'layer_2': {'node_1': {'weights': array([0.82, 0.08]), 'bias': array([0.14])}, 'node_2': {'weights': array([0.25, 0.21]), 'bias': array([0.17])}}, 'output': {'node_1': {'weights': array([0.39, 0.34]), 'bias': array([0.62])}}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "\n",
+    "num_nodes_previous = n \n",
+    "\n",
+    "network = {}\n",
+    "for layer in range(num_hidden_layers + 1): \n",
+    "\n",
+    "    if layer == num_hidden_layers:\n",
+    "        layer_name = 'output'\n",
+    "        num_nodes = num_nodes_output\n",
+    "    else:\n",
+    "        layer_name = 'layer_{}'.format(layer + 1)\n",
+    "        num_nodes = m[layer]\n",
+    "    \n",
+    "    network[layer_name] = {}\n",
+    "    for node in range(num_nodes):\n",
+    "        node_name = 'node_{}'.format(node+1)\n",
+    "        network[layer_name][node_name] = {\n",
+    "            'weights': np.around(np.random.uniform(size=num_nodes_previous), decimals=2),\n",
+    "            'bias': np.around(np.random.uniform(size=1), decimals=2),\n",
+    "        }\n",
+    "    \n",
+    "    num_nodes_previous = num_nodes\n",
+    "    \n",
+    "print(network) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_network(num_inputs, num_hidden_layers, num_nodes_hidden, num_nodes_output):\n",
+    "    \n",
+    "    num_nodes_previous = num_inputs \n",
+    "\n",
+    "    network = {}\n",
+    "    \n",
+    "    for layer in range(num_hidden_layers + 1):\n",
+    "        \n",
+    "        if layer == num_hidden_layers:\n",
+    "            layer_name = 'output' \n",
+    "            num_nodes = num_nodes_output\n",
+    "        else:\n",
+    "            layer_name = 'layer_{}'.format(layer + 1) \n",
+    "            num_nodes = num_nodes_hidden[layer] \n",
+    "        \n",
+    "       \n",
+    "        network[layer_name] = {}\n",
+    "        for node in range(num_nodes):\n",
+    "            node_name = 'node_{}'.format(node+1)\n",
+    "            network[layer_name][node_name] = {\n",
+    "                'weights': np.around(np.random.uniform(size=num_nodes_previous), decimals=2),\n",
+    "                'bias': np.around(np.random.uniform(size=1), decimals=2),\n",
+    "            }\n",
+    "    \n",
+    "        num_nodes_previous = num_nodes\n",
+    "\n",
+    "    return network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "small_network = initialize_network(5, 3, [3, 2, 3], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sma"
+   ]
   }
  ],
  "metadata": {
