--- a/Artificial Neural Networks - Forward Propagation.ipynb
+++ b/Artificial Neural Networks - Forward Propagation.ipynb
@@ -339,11 +339,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'layer_1': {'node_1': {'weights': array([0.08, 0.53, 0.41, 0.61, 0.36]),\n",
+       "   'bias': array([0.53])},\n",
+       "  'node_2': {'weights': array([0.76, 0.75, 0.71, 0.67, 0.03]),\n",
+       "   'bias': array([0.63])},\n",
+       "  'node_3': {'weights': array([0.68, 0.97, 0.12, 0.29, 0.41]),\n",
+       "   'bias': array([0.26])}},\n",
+       " 'layer_2': {'node_1': {'weights': array([0.52, 0.97, 0.28]),\n",
+       "   'bias': array([0.49])},\n",
+       "  'node_2': {'weights': array([0.53, 0.8 , 0.04]), 'bias': array([0.39])}},\n",
+       " 'layer_3': {'node_1': {'weights': array([0.74, 0.67]), 'bias': array([0.39])},\n",
+       "  'node_2': {'weights': array([0.17, 0.6 ]), 'bias': array([0.79])},\n",
+       "  'node_3': {'weights': array([0.14, 0.77]), 'bias': array([0.82])}},\n",
+       " 'output': {'node_1': {'weights': array([0.51, 0.58, 0.8 ]),\n",
+       "   'bias': array([0.95])}}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "small_network"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sma"
+    "    "
    ]
   }
  ],
