--- a/Artificial Neural Networks - Forward Propagation.ipynb
+++ b/Artificial Neural Networks - Forward Propagation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.52 0.02 0.07 0.86 0.03 0.74]\n"
+      "[0.92 0.9  0.03 0.96 0.14 0.28]\n"
      ]
     }
    ],
@@ -62,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.55 0.89 0.71]\n"
+      "[0.61 0.94 0.85]\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -98,14 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The weighted sum of the inputs at the first node in the hidden layer is 0.8270000000000001\n"
+      "The weighted sum of the inputs at the first node in the hidden layer is 1.835\n"
      ]
     }
    ],
@@ -117,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The weighted sum of the inputs at the second node in the hidden layer is 1.656\n"
+      "The weighted sum of the inputs at the second node in the hidden layer is 1.771\n"
      ]
     }
    ],
@@ -136,14 +136,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The activation of the first node in the hidden layer is 0.6957\n"
+      "The activation of the first node in the hidden layer is 0.8624\n"
      ]
     }
    ],
@@ -155,14 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The activation of the second node in the hidden layer is 0.8397\n"
+      "The activation of the second node in the hidden layer is 0.8546\n"
      ]
     }
    ],
@@ -174,14 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The weighted sum of the inputs at the node in the output layer is 1.3522\n"
+      "The weighted sum of the inputs at the node in the output layer is 1.21\n"
      ]
     }
    ],
@@ -193,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The output of the network for x1 = 0.5 and x2 = 0.85 is 0.7945\n"
+      "The output of the network for x1 = 0.5 and x2 = 0.85 is 0.7703\n"
      ]
     }
    ],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,14 +254,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'layer_1': {'node_1': {'weights': array([0.51, 0.47]), 'bias': array([0.87])}, 'node_2': {'weights': array([0.76, 0.86]), 'bias': array([0.13])}}, 'layer_2': {'node_1': {'weights': array([0.82, 0.08]), 'bias': array([0.14])}, 'node_2': {'weights': array([0.25, 0.21]), 'bias': array([0.17])}}, 'output': {'node_1': {'weights': array([0.39, 0.34]), 'bias': array([0.62])}}}\n"
+      "{'layer_1': {'node_1': {'weights': array([0.  , 0.52]), 'bias': array([0.55])}, 'node_2': {'weights': array([0.49, 0.77]), 'bias': array([0.16])}}, 'layer_2': {'node_1': {'weights': array([0.76, 0.02]), 'bias': array([0.14])}, 'node_2': {'weights': array([0.12, 0.31]), 'bias': array([0.67])}}, 'output': {'node_1': {'weights': array([0.47, 0.82]), 'bias': array([0.29])}}}\n"
      ]
     }
    ],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,29 +339,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'layer_1': {'node_1': {'weights': array([0.08, 0.53, 0.41, 0.61, 0.36]),\n",
-       "   'bias': array([0.53])},\n",
-       "  'node_2': {'weights': array([0.76, 0.75, 0.71, 0.67, 0.03]),\n",
-       "   'bias': array([0.63])},\n",
-       "  'node_3': {'weights': array([0.68, 0.97, 0.12, 0.29, 0.41]),\n",
-       "   'bias': array([0.26])}},\n",
-       " 'layer_2': {'node_1': {'weights': array([0.52, 0.97, 0.28]),\n",
-       "   'bias': array([0.49])},\n",
-       "  'node_2': {'weights': array([0.53, 0.8 , 0.04]), 'bias': array([0.39])}},\n",
-       " 'layer_3': {'node_1': {'weights': array([0.74, 0.67]), 'bias': array([0.39])},\n",
-       "  'node_2': {'weights': array([0.17, 0.6 ]), 'bias': array([0.79])},\n",
-       "  'node_3': {'weights': array([0.14, 0.77]), 'bias': array([0.82])}},\n",
-       " 'output': {'node_1': {'weights': array([0.51, 0.58, 0.8 ]),\n",
-       "   'bias': array([0.95])}}}"
+       "{'layer_1': {'node_1': {'weights': array([0.73, 0.7 , 0.33, 0.33, 0.98]),\n",
+       "   'bias': array([0.62])},\n",
+       "  'node_2': {'weights': array([0.95, 0.77, 0.83, 0.41, 0.45]),\n",
+       "   'bias': array([0.4])},\n",
+       "  'node_3': {'weights': array([1.  , 0.18, 0.96, 0.42, 0.42]),\n",
+       "   'bias': array([0.46])}},\n",
+       " 'layer_2': {'node_1': {'weights': array([0.37, 0.47, 0.04]),\n",
+       "   'bias': array([0.08])},\n",
+       "  'node_2': {'weights': array([0.73, 0.64, 0.03]), 'bias': array([0.3])}},\n",
+       " 'layer_3': {'node_1': {'weights': array([0.22, 0.06]), 'bias': array([0.52])},\n",
+       "  'node_2': {'weights': array([0.42, 0.05]), 'bias': array([0.57])},\n",
+       "  'node_3': {'weights': array([0.8 , 0.11]), 'bias': array([0.28])}},\n",
+       " 'output': {'node_1': {'weights': array([0.64, 0.49, 0.51]),\n",
+       "   'bias': array([0.46])}}}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,12 +372,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    "
+    "def compute_weighted_sum(inputs, weights, bias):\n",
+    "    return np.sum(inputs * weights) + bias"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The inputs to the network are [0.15 0.74 0.26 0.53 0.01]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import seed\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(12)\n",
+    "inputs = np.around(np.random.uniform(size=5), decimals=2)\n",
+    "\n",
+    "print('The inputs to the network are {}'.format(inputs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The weighted sum at the first node in the hidden layer is 1.518\n"
+     ]
+    }
+   ],
+   "source": [
+    "node_weights = small_network['layer_1']['node_1']['weights']\n",
+    "node_bias = small_network['layer_1']['node_1']['bias']\n",
+    "\n",
+    "weighted_sum = compute_weighted_sum(inputs, node_weights, node_bias)\n",
+    "print('The weighted sum at the first node in the hidden layer is {}'.format(np.around(weighted_sum[0], decimals=4)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def node_activation(weighted_sum):\n",
+    "    return 1.0 / (1.0 + np.exp(-1 * weighted_sum))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The output of the first node in the hidden layer is 0.8202\n"
+     ]
+    }
+   ],
+   "source": [
+    "node_output  = node_activation(compute_weighted_sum(inputs, node_weights, node_bias))\n",
+    "print('The output of the first node in the hidden layer is {}'.format(np.around(node_output[0], decimals=4)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
