--- a/Classification and Regression using Keras.ipynb
+++ b/Classification and Regression using Keras.ipynb
@@ -1136,6 +1136,121 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define classification model\n",
+    "def classification_model():\n",
+    "    # create model\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(num_pixels, activation='relu', input_shape=(num_pixels,)))\n",
+    "    model.add(Dense(100, activation='relu'))\n",
+    "    model.add(Dense(num_classes, activation='softmax'))\n",
+    "    \n",
+    "    \n",
+    "    # compile model\n",
+    "    model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 60000 samples, validate on 10000 samples\n",
+      "Epoch 1/10\n",
+      "60000/60000 - 22s - loss: 0.1875 - accuracy: 0.9426 - val_loss: 0.0884 - val_accuracy: 0.9740\n",
+      "Epoch 2/10\n",
+      "60000/60000 - 21s - loss: 0.0781 - accuracy: 0.9758 - val_loss: 0.0763 - val_accuracy: 0.9750\n",
+      "Epoch 3/10\n",
+      "60000/60000 - 21s - loss: 0.0557 - accuracy: 0.9828 - val_loss: 0.0775 - val_accuracy: 0.9746\n",
+      "Epoch 4/10\n",
+      "60000/60000 - 27s - loss: 0.0409 - accuracy: 0.9870 - val_loss: 0.0797 - val_accuracy: 0.9757\n",
+      "Epoch 5/10\n",
+      "60000/60000 - 24s - loss: 0.0322 - accuracy: 0.9896 - val_loss: 0.0723 - val_accuracy: 0.9790\n",
+      "Epoch 6/10\n",
+      "60000/60000 - 28s - loss: 0.0253 - accuracy: 0.9919 - val_loss: 0.0808 - val_accuracy: 0.9798\n",
+      "Epoch 7/10\n",
+      "60000/60000 - 24s - loss: 0.0219 - accuracy: 0.9932 - val_loss: 0.0751 - val_accuracy: 0.9799\n",
+      "Epoch 8/10\n",
+      "60000/60000 - 21s - loss: 0.0204 - accuracy: 0.9935 - val_loss: 0.0791 - val_accuracy: 0.9795\n",
+      "Epoch 9/10\n",
+      "60000/60000 - 21s - loss: 0.0181 - accuracy: 0.9946 - val_loss: 0.0940 - val_accuracy: 0.9773\n",
+      "Epoch 10/10\n",
+      "60000/60000 - 20s - loss: 0.0167 - accuracy: 0.9948 - val_loss: 0.0985 - val_accuracy: 0.9785\n"
+     ]
+    }
+   ],
+   "source": [
+    "# build the model\n",
+    "model = classification_model()\n",
+    "\n",
+    "model.fit(X_train, y_train, validation_data=(X_test, y_test), epochs=10, verbose=2)\n",
+    "\n",
+    "# evaluate the model\n",
+    "scores = model.evaluate(X_test, y_test, verbose=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9785000085830688% \n",
+      " Error: 0.021499991416931152\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Accuracy: {}% \\n Error: {}'.format(scores[1], 1 - scores[1]))        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('classification_model.h5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## When you are ready to use your model again, you use the load_model function from keras.models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import load_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pretrained_model = load_model('classification_model.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
